packages/jsii/test/negatives/neg.enum-name.1.ts
///!MATCH_ERROR: Type names must begin with an uppercase characters: myEnum

export enum myEnum {
    Foo,
    Goo
}
